--- a/artikel.html
+++ b/artikel.html
@@ -7,7 +7,11 @@
 <body>
 <h1>test</h1>
 
-<img scr="images/vloot1.jpg">
+<img {float : left ;} src = "imgages\vloot1.jpg" > 
+
+<img {float : right ;}src="imgaes\vloot2.jpg">
+
+<img {float : left ;}src="images\vloot3.jpg">
 </body>
 
 
