Border gemaakt, foto's goedgezet

--- a/artikel.html
+++ b/artikel.html
@@ -1,28 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link link rel="stylesheet" href = "css\style.css">	
 	<title>Kranten artikel</title>
-<link link rel="stylesheet" href = "css\style.css">
+
 </head>
-<body>
-<h1>kranten artikel</h1>
-
-<img {float : left ;} src = "images\vloot1.jpg" > 
-
-
-<p> "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin tempor, velit vel tincidunt pretium, lacus massa laoreet augue, non laoreet neque magna at mi. Nunc et magna sit amet eros ultrices suscipit at eget augue. Nulla et metus vel massa scelerisque ullamcorper. Quisque convallis posuere erat, id ultricies nisl commodo sed. Aliquam vulputate neque eget felis convallis faucibus. Cras ut dui turpis. Suspendisse in leo ut erat dictum facilisis. Aliquam dignissim, tortor ac rhoncus varius, ipsum mauris viverra elit, vel sagittis diam arcu ac sem. Praesent convallis nunc sed velit venenatis egestas." </p> 
-
-
-<img {float : right ;} src="images\vloot2.jpg">
-
-
-<p>"Nunc vehicula nisi vel nisi varius, at porttitor augue porta. Aliquam lectus orci, pellentesque id pretium fringilla, maximus non augue. Phasellus porta magna sit amet sapien faucibus tempus. Nullam laoreet ultrices est a elementum. Pellentesque ut sodales justo. Duis tempus malesuada auctor. Aliquam eu leo ac erat varius faucibus. Sed egestas lectus nisi, aliquam tincidunt dolor sodales sit amet. Suspendisse potenti. Sed pulvinar eget metus ac eleifend. Praesent commodo, ante id condimentum tristique, felis augue dignissim sem, quis volutpat libero quam posuere velit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Fusce ut placerat risus. Sed tincidunt ipsum nibh, ac convallis risus ultricies mollis. Mauris quis ante aliquam, suscipit elit ac, auctor eros."</p>
-
-
-<img {float : left ;} src="images\vloot3.jpg">
-
-
-<p>"Curabitur non sapien ac arcu porta volutpat vel quis sapien. Aenean ut blandit felis, id vestibulum orci. Ut consectetur, felis sit amet scelerisque sollicitudin, massa dolor fringilla urna, et venenatis enim sem vel eros. Praesent ac augue sollicitudin, porta nisl nec, eleifend mi. Sed dapibus elit ac lectus dignissim, sit amet gravida dui hendrerit. Curabitur consequat velit eu massa rhoncus, non convallis justo condimentum. Mauris porttitor varius malesuada. In mollis enim velit, eget consequat urna vehicula eu. Aliquam id commodo leo."</p>
+	<body>
+	<h1>kranten artikel</h1>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin tempor, velit vel tincidunt pretium.<br>
+	<img src = "images\vloot1.jpg"> 
+	Lacus massa laoreet augue, non laoreet neque magna at mi. Nunc et magna sit amet eros ultrices suscipit at eget augue. Nulla et metus vel massa scelerisque ullamcorper. Quisque convallis posuere erat, id ultricies nisl commodo sed. Aliquam vulputate neque eget felis convallis faucibus. Cras ut dui turpis. Suspendisse in leo ut erat dictum facilisis. Aliquam dignissim, tortor ac rhoncus varius, ipsum mauris viverra elit, vel sagittis diam arcu ac sem. Praesent convallis nunc sed velit venenatis egestas. 
+	<img src = "images\vloot2.jpg">
+	Nunc vehicula nisi vel nisi varius, at porttitor augue porta. Aliquam lectus orci, pellentesque id pretium fringilla, maximus non augue. Phasellus porta magna sit amet sapien faucibus tempus. Nullam laoreet ultrices est a elementum. Pellentesque ut sodales justo. Duis tempus malesuada auctor. Aliquam eu leo ac erat varius faucibus. Sed egestas lectus nisi, aliquam tincidunt dolor sodales sit amet. Suspendisse
+	 potenti. Sed pulvinar eget metus ac eleifend. Praesent commodo, ante id condimentum tristique, felis augue dignissim sem, quis volutpat libero quam posuere velit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Fusce ut placerat risus. Sed tincidunt ipsum nibh, ac convallis risus ultricies mollis. Mauris quis ante aliquam, suscipit elit ac, auctor eros.
+	Curabitur non sapien ac arcu porta volutpat vel quis sapien. Aenean ut blandit felis, id vestibulum orci. Ut consectetur, felis sit amet scelerisque sollicitudin, massa dolor fringilla urna, et venenatis enim sem vel eros. Praesent ac augue sollicitudin, porta nisl nec, eleifend mi. Sed dapibus elit ac lectus dignissim, sit amet gravida dui hendrerit. Curabitur consequat velit eu massa rhoncus, non convallis justo condimentum. Mauris porttitor varius malesuada. In mollis enim velit, eget consequat urna vehicula eu. Aliquam id commodo leo.Nunc vehicula nisi vel nisi varius, at porttitor augue porta. Aliquam lectus orci, pellentesque id pretium fringilla, maximus non augue. Phasellus porta magna sit amet sapien faucibus tempus. Nullam laoreet ultrices est a elementum. Pellentesque ut sodales justo. Duis tempus malesuada auctor. Aliquam eu leo ac erat varius faucibus. Sed egestas lectus nisi, aliquam tincidunt dolor sodales sit amet. Suspendisse
+	<img src="images\vloot3.jpg">
+	 potenti. Sed pulvinar eget metus ac eleifend. Praesent commodo, ante id condimentum tristique, felis augue dignissim sem, quis volutpat libero quam posuere velit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Fusce ut placerat risus. Sed tincidunt ipsum nibh, ac convallis risus ultricies mollis. Mauris quis ante aliquam, suscipit elit ac, auctor eros. Curabitur non sapien ac arcu porta volutpat vel quis sapien. Aenean ut blandit felis, id vestibulum orci. Ut consectetur, felis sit amet scelerisque sollicitudin, massa dolor fringilla urna, et venenatis enim sem vel eros. Praesent ac augue sollicitudin, porta nisl nec, eleifend mi. Sed dapibus elit ac lectus dignissim, sit amet gravida dui hendrerit. Curabitur consequat velit eu massa rhoncus, non convallis justo condimentum. Mauris porttitor varius malesuada. In mollis enim velit, eget consequat urna vehicula eu. Aliquam id commodo leo.Nunc vehicula nisi vel nisi varius, at porttitor augue porta. Aliquam lectus orci, pellentesque id pretium fringilla, maximus non augue. Phasellus porta magna sit amet sapien faucibus tempus. Nullam laoreet ultrices est a elementum. Pellentesque ut sodales justo. Duis tempus malesuada auctor. Aliquam eu leo ac erat varius faucibus. Sed egestas lectus nisi, aliquam tincidunt dolor sodales sit amet. Suspendisse. </p>
 </body>
 
 
